# papierpiano

./: Dockerfile  index.html  package-lock.json  package.json  pyproject.toml  renovate.json
.github/workflows/: docker-publish.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: TextTab.tsx  image.tsx  qrcode.tsx
frontend/src/components/tabs/: ImageTab.tsx  QRCodeTab.tsx  TextTab.tsx  TodoTab.tsx
frontend/src/components/todos/: SavedTodoLists.tsx  TodoEditor.tsx  TodoItem.tsx  TodoLists.tsx  TodoTab.tsx  atoms.ts  todoActions.ts  useSavedTodoLists.ts  useTodoView.ts  useTodos.ts
src/: App.tsx
src/papierdaily/: __init__.py
src/papierpiano/: __init__.py  main.py  model.py  printer.py
src/papierpiano/papierdaily/: __init__.py
