[project]
name = "papierpiano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Théo Lévesque", email = "theo.levesque.024@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-escpos>=3.1",
    "sanic>=25.3.0",
    "sanic-ext>=24.12.0",
]

[project.scripts]
papierdaily = "papierpiano:papierdaily"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
